# pydantic-model-generator

./: .dockerignore  .env.example  .gitignore  BUILD_YOUR_OWN.md  CORE_FOUNDATION.md  DEMO_PROOF.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  DEVELOPER_HANDOFF.md  Dockerfile  GLOSSARY.md  IMPLEMENTATION_PLAN.md  LEARNING_CENTER.md  PROGRESS_TRACKER.md  PROJECT_CONTEXT.md  PROJECT_PLAN.md  QUICK_START.md  RAILWAY_DEPLOYMENT_PROGRESS.md  RAILWAY_NEXT_STEPS.md  RAILWAY_RESEARCH_FINDINGS.md  README.md  SCHEMA_ALIGNMENT_ANALYSIS.md  START_HERE.md  TECH_STACK.md  TOOLS.md  V1_VS_V2_COMPARISON.md  demo_full_pipeline.py  demo_pipeline.py  entities - Pydantiv V1.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  run_llm_synthesis.py  test_core_foundation.py  test_ontology_retriever.py  test_schema_synthesizer.py  validate_outcome.py
agents/: __init__.py  codegen_orchestrator.py  ontology_retriever.py  schema_synthesizer.py
backend/: .env.example  requirements.txt
backend/app/: __init__.py  main.py
demo-app/: .gitignore  README.md
demo-app/backend/: .env.example
demo-app/docs/: PROGRESS.md  SPEC.md
docs/: AGENT_PIPELINE.md  COMPLETION_SUMMARY.md  DEBUGGING_SUMMARY.md  GRAPHITI_INTEGRATION.md  IMPLEMENTATION_STATUS.md  LEARNING_CENTER_DESIGN.md  LEARNING_CENTER_INTEGRATION.md  ONTOLOGY_MAPPING.md  PHASE_2_AUTO_REPAIR_COMPLETE.md  README.md  SESSION_2_COMPLETION.md  VERIFICATION_GUIDE.md  murabaha_audit_requirements.md
dsl/: __init__.py  loader.py  outcome_spec_schema.py
eval/: goldenset_aaoifi.yaml  goldenset_resource_allocation.yaml
frontend/: .env.local.example  README.md  package-lock.json  package.json  playwright.config.ts
frontend/app/: page.tsx
graphmodels/: __init__.py
pipeline/: README.md  add_overlay.py
pydantic_library/: DECOMPOSITION_REPORT.md  HANDOFF.md  MIGRATION_GUIDE.md  README.md  temp_output.txt  test_report.json
schemas/: core.yaml
tests/: test_aaoifi_models.py  test_business_import.py  test_business_v2.py  test_modular_structure.py  test_murabaha_audit_e2e.py
(+128 files in other folders)
